# mpl-subplots-shim

./: .gitignore  pyproject.toml  run.ps1
src/mpl_subplots_shim/: __init__.py  _grid.py  _shim.py
tests/: test_grid.py  test_subplots.py
