[project]
name = "mpl-subplots-shim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Takumasa Nakamura", email = "n.takumasa@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "optype[numpy]>=0.9.3",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pyrefly>=0.45.2",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ty>=0.0.1a33",
]
